--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Automatically switches between a dark theme at night and a light theme during the day.",
   "version": "0.0.1",
   "engines": {
-    "vscode": "^1.94.0"
+    "vscode": "^1.93.0"
   },
   "categories": [
     "Other"
@@ -14,8 +14,12 @@
   "contributes": {
     "commands": [
       {
-        "command": "theme-switcher.helloWorld",
-        "title": "Hello World"
+        "command": "theme-switcher.test123",
+        "title": "Test123"
+      },
+      {
+        "command": "extension.switchTheme",
+        "title": "Switch Theme"
       }
     ]
   },
@@ -25,17 +29,21 @@
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src",
-    "test": "vscode-test"
+    "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
+    "@types/mocha": "^10.0.9",
+    "@types/node": "^20.16.13",
+    "@types/sinon": "^17.0.3",
     "@types/vscode": "^1.94.0",
-    "@types/mocha": "^10.0.8",
-    "@types/node": "20.x",
     "@typescript-eslint/eslint-plugin": "^8.7.0",
     "@typescript-eslint/parser": "^8.7.0",
-    "eslint": "^9.11.1",
-    "typescript": "^5.6.2",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1"
+    "@vscode/test-electron": "^2.4.1",
+    "eslint": "^9.11.1",
+    "mocha": "^10.7.3",
+    "sinon": "^19.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   }
 }
