--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@types/mocha": "^10.0.9",
+    
     "@types/node": "^20.16.13",
     "@types/sinon": "^17.0.3",
     "@types/vscode": "^1.94.0",
@@ -45,5 +46,8 @@
     "sinon": "^19.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "axios": "^1.7.7"
   }
 }
